--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -1,56 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="template1"
+>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="webjars/bootstrap/5.3.3/css/bootstrap.min.css">
 </head>
 <body>
-<div class="p-3">
-    <div class="card">
-        <div class="card-header">
-            Patients
-        </div>
-        <div class="card-body">
-            <form th:action="@{/index}" method="get">
-                <div class="input-group mb-3">
-                    <label >keyword : </label>
-                    <input type="text" name="keyword" th:value="${keyword}">
-                    <button class="btn btn-outline-secondary" type="submit">Search</button>
-                </div>
-            </form>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>name</th>
-                    <th>Date</th>
-                    <th>Score</th>
-                    <th>Malade</th>
-                    <th>Actions</th>
-                </tr>
-                <tr th:each="p:${listPatient}">
-                    <td th:text="${p.id}"></td>
-                    <td th:text="${p.name}"></td>
-                    <td th:text="${p.dateNaissance}"></td>
-                    <td th:text="${p.score}"></td>
-                    <td th:text="${p.malade}"></td>
-                    <td >
-                        <a onclick="return confirm('Etes vous sure?')" class="btn btn-danger" th:href="@{delete(id=${p.id},keyword=${keyword},page=${currentPage})}">delete</a>
-                        <a class="btn btn-info" th:href="@{displayDetails(id=${p.id})}">Details</a>
-                    </td>
+<div layout:fragment="content1">
+    <div class="p-3">
+        <div class="card">
+            <div class="card-header">
+                Patients
+            </div>
+            <div class="card-body">
+                <form th:action="@{/index}" method="get">
+                    <div class="input-group mb-3">
+                        <label >keyword : </label>
+                        <input type="text" name="keyword" th:value="${keyword}">
+                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                    </div>
+                </form>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>name</th>
+                        <th>Date</th>
+                        <th>Score</th>
+                        <th>Malade</th>
+                        <th>Actions</th>
+                    </tr>
+                    <tr th:each="p:${listPatient}">
+                        <td th:text="${p.id}"></td>
+                        <td th:text="${p.name}"></td>
+                        <td th:text="${p.dateNaissance}"></td>
+                        <td th:text="${p.score}"></td>
+                        <td th:text="${p.malade}"></td>
+                        <td >
+                            <a onclick="return confirm('Etes vous sure?')" class="btn btn-danger" th:href="@{delete(id=${p.id},keyword=${keyword},page=${currentPage})}">delete</a>
+                            <a class="btn btn-info" th:href="@{displayDetails(id=${p.id})}">Details</a>
+                            <a class="btn btn-warning" th:href="@{edit(id=${p.id},keyword=${keyword},page=${currentPage})}">Edit</a>
+                        </td>
 
-                </tr>
-                </thead>
-            </table>
-            <ul class="nav nav-pills">
-                <li th:each="page,status:${pages}">
-                    <a th:href="@{/index(page=${status.index},keyword=${keyword})}"
-                       th:class="${currentPage==status.index} ? 'btn btn-info ms-1' : 'btn btn-outline-info ms-1'"
-                       th:text="${1+status.index}"></a>
-                </li>
-            </ul>
+                    </tr>
+                    </thead>
+                </table>
+                <ul class="nav nav-pills">
+                    <li th:each="page,status:${pages}">
+                        <a th:href="@{/index(page=${status.index},keyword=${keyword})}"
+                           th:class="${currentPage==status.index} ? 'btn btn-info ms-1' : 'btn btn-outline-info ms-1'"
+                           th:text="${1+status.index}"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
+
     </div>
 
 </div>
