--- a/src/main/resources/templates/patientDetails.html
+++ b/src/main/resources/templates/patientDetails.html
@@ -16,7 +16,7 @@
         <p>Date : <span th:text="${patient.dateNaissance}" class="fw-bold"></span></p>
         <p>Score : <span th:text="${patient.score}" class="fw-bold"></span></p>
         <p>Malade : <span th:text="${patient.malade}" class="fw-bold"></span></p>
-        <a class="btn btn-info" th:href="@{/index}">Back</a>
+        <a class="btn btn-info" th:href="@{/user/index}">Back</a>
     </div>
 </div>
 </body>
