--- a/src/main/resources/templates/formPatients.html
+++ b/src/main/resources/templates/formPatients.html
@@ -11,7 +11,7 @@
 <body>
 <div layout:fragment="content1">
 
-    <form method="post" th:action="@{save}">
+    <form method="post" th:action="@{/admin/save}">
         <div class="card col-md-6 offset-3">
             <div class="card-header">
                 <h2>Form Patients</h2>
