--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/user/index}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
@@ -30,19 +30,22 @@
                         Patients
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" th:href="@{/formPatients}">New</a></li>
-                        <li><a class="dropdown-item" th:href="@{index}">List</a></li>
-                        <li><a class="dropdown-item" th:href="@{index}">Search</a></li>
+                        <li><a th:if="${#authorization.expr('hasRole(''ADMIN'')')}" class="dropdown-item" th:href="@{/admin/formPatients}">New</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user/index}">List</a></li>
+                        <li><a class="dropdown-item" th:href="@{/user/index}">Search</a></li>
                     </ul>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        [UserName]
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${#authentication.name}">
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                        <li><a class="dropdown-item" th:href="@{/formPatients}">Logout</a></li>
+                        <li>
+                            <form th:action="@{/logout}" method="post">
+                                <button class="dropdown-item" type="submit">Logout</button>
+                            </form>
+                        </li>
                     </ul>
                 </li>
 
